app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

html {
  scrollbar-color: #c1c1c1 transparent;
  scrollbar-width: thin;
  overflow-y: scroll;
  scroll-behavior: smooth;
}
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}
::-webkit-scrollbar-track {
  /* webkit needs an fixed value */
  background-color: var(--page-background);
}
::-webkit-scrollbar-thumb {
  background: #c1c1c1;
}
::-webkit-scrollbar-thumb:hover {
  background: #a1a1a1;
}

